--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     />
     <meta name="author" content="<%= VUE_APP_AUTHOR %>" />
     <link rel="stylesheet" href="<%= BASE_URL %>static/css/loading.css" />
+    <link rel="stylesheet" href="static/3rdParty/Cesium/Widgets/widgets.css">
+    <link rel="stylesheet" type="text/css" href="static/css/iconfont.css">
     <script type="text/javascript" src="static/3rdParty/Cesium/Cesium.js"></script>
   </head>
   <body>
